--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ strum = "0.26.3"
 strum_macros = "0.26.4"
 thiserror = "1.0.63"
 tokio = { version = "1.39.3", features = ["full"] }
-tower-http = { version = "0.6.0", features = ["trace"] }
+tower-http = { version = "0.6.0", features = ["trace", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 webrtc = "0.11.0"
